feat(inventory): add batch details component with responsive design and translation support

--- a/src/app/shared/components/delete/delete.component.html
+++ b/src/app/shared/components/delete/delete.component.html
@@ -1,11 +1,11 @@
 
 
-<p>Are you sure you want to <strong>{{ data.label }}</strong>?</p>
+<p>{{ 'shared.deleteMessage' | translate }} <strong>{{ data.label }}</strong></p>
 
 <div class="modal-footer mt-4">
-  <button mat-stroked-button class="gray-button" (click)="cancel()">Cancel</button>
+  <button mat-stroked-button class="gray-button" (click)="cancel()">{{ 'shared.cancelButton' | translate }}</button>
   <button mat-flat-button class="red-button" (click)="confirm()">
     <mat-icon>delete</mat-icon>
-    Delete
+    {{ 'shared.deleteButton' | translate }}
   </button>
 </div>
