--- a/src/app/Restock/monitoring/suppliers-orders/components/order-details/order-details.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/components/order-details/order-details.component.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="total-price">
-          <strong>{{'supplier-orders.supplies.total-price' | translate}}: ${{ this.order?.total_price }}</strong>
+          <strong>{{'supplier-orders.supplies.total-price' | translate}}: ${{ this.order?.totalPrice }}</strong>
         </div>
         @if(!hideState)
         {
