--- a/src/app/Restock/resource/orders-to-suppliers/components/order-details/order-details-modal.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/order-details/order-details-modal.component.html
@@ -76,7 +76,7 @@
                 "order-to-supplier.order-details-modal.totalPrice" | translate
               }}:</strong
             >
-            S/. {{ order.total_price | number : "1.2-2" }}
+            S/. {{ order.totalPrice | number : "1.2-2" }}
           </p>
           <p>
             <strong
