--- a/src/app/Restock/resource/orders-to-suppliers/components/order-feedback-modal/order-feedback-modal.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/order-feedback-modal/order-feedback-modal.component.html
@@ -63,7 +63,7 @@
                     | translate
                 }}:</strong
               >
-              S/. {{ order.total_price | number : "1.2-2" }}
+              S/. {{ order.totalPrice | number : "1.2-2" }}
             </span>
           </div>
         </mat-card-content>
