feat(recipes): add custom field support and standardize recipe property naming

--- a/src/app/shared/components/create-and-edit-form/create-and-edit-form.component.html
+++ b/src/app/shared/components/create-and-edit-form/create-and-edit-form.component.html
@@ -86,6 +86,13 @@
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
         }
+
+        @if (field.type === 'custom' && customComponents?.[field.name]) {
+          <div class="form-custom-component">
+            <ng-container *ngComponentOutlet="customComponents[field.name]"></ng-container>
+          </div>
+        }
+
       </div>
     </ng-container>
   }
