--- a/src/app/Restock/planning/recipe/components/create-and-edit-recipe/create-and-edit-recipe.component.html
+++ b/src/app/Restock/planning/recipe/components/create-and-edit-recipe/create-and-edit-recipe.component.html
@@ -3,15 +3,22 @@
     [schema]="schema"
     [initialData]="initialData"
     [mode]="mode"
+    [customComponents]="{
+    'supply-selector': SupplySelectorComponent
+  }"
     (formChange)="handleFormChange($event)"
-    (submit)="onSubmit($event)"
-  />
-  <app-supply-selector
-    [supplies]="supplies"
-    (suppliesChange)="handleSuppliesChange($event)"
-  ></app-supply-selector>
+  ></app-create-and-edit-form>
+
 
 
   <div class="recipe-modal-actions">
+    <button
+      mat-raised-button
+      class="green-button"
+      type="button"
+      (click)="onSubmit($event)"
+    >
+      {{ mode === 'edit' ? ('inventory.update' | translate) : ('inventory.save' | translate) }}
+    </button>
   </div>
 </div>
