--- a/src/app/Restock/planning/recipe/pages/restaurant-recipes-overview/restaurant-recipes-overview.component.html
+++ b/src/app/Restock/planning/recipe/pages/restaurant-recipes-overview/restaurant-recipes-overview.component.html
@@ -46,9 +46,9 @@
     <div class="recipes-grid">
       @for (recipe of filteredRecipes; track recipe.id) {
         <div class="recipe-card">
-          <img [src]="recipe.image_url" alt="Dish image" />
+          <img [src]="recipe.imageUrl" alt="Dish image" />
           <h3>{{ recipe.name }}</h3>
-          <p>Total cost: S/.{{ recipe.total_price }}</p>
+          <p>Total cost: S/.{{ recipe.price }}</p>
           <div class="recipe-card__actions">
             <button mat-icon-button (click)="openEditDialog(recipe)">
               <mat-icon>edit</mat-icon>
