--- a/src/app/Restock/planning/recipe/components/create-and-edit-recipe/create-and-edit-recipe.component.html
+++ b/src/app/Restock/planning/recipe/components/create-and-edit-recipe/create-and-edit-recipe.component.html
@@ -3,22 +3,9 @@
     [schema]="schema"
     [initialData]="initialData"
     [mode]="mode"
-    [customComponents]="{
-    'supply-selector': SupplySelectorComponent
-  }"
+    [customComponents]="{'supply-selector': SupplySelectorComponent}"
     (formChange)="handleFormChange($event)"
+    (submit)="onSubmit($event)"
   ></app-create-and-edit-form>
 
-
-
-  <div class="recipe-modal-actions">
-    <button
-      mat-raised-button
-      class="green-button"
-      type="button"
-      (click)="onSubmit($event)"
-    >
-      {{ mode === 'edit' ? ('inventory.update' | translate) : ('inventory.save' | translate) }}
-    </button>
-  </div>
 </div>
