--- a/src/app/Restock/planning/recipe/components/supply-selector/supply-selector.component.html
+++ b/src/app/Restock/planning/recipe/components/supply-selector/supply-selector.component.html
@@ -2,7 +2,7 @@
   <!-- Selector de insumo y cantidad -->
   <div class="supply-selector__inputs">
     <mat-form-field appearance="fill" class="supply-selector__select">
-      <mat-label>Select supply</mat-label>
+      <mat-label>{{ 'recipes.selectSupply' | translate }}</mat-label>
       <mat-select [(ngModel)]="selectedSupply">
         @for (supply of availableSupplies; track supply){
           <mat-option [value]="supply">
@@ -13,13 +13,13 @@
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="supply-selector__input">
-      <mat-label>Quantity</mat-label>
+      <mat-label>{{ 'recipes.quantity' | translate }}</mat-label>
       <input
         type="number"
         matInput
         [(ngModel)]="selectedQuantity"
         min="1"
-        placeholder="Qty"
+        [placeholder]="'recipes.quantity' | translate"
       />
     </mat-form-field>
 
@@ -39,13 +39,13 @@
 
       <!-- ID Column -->
       <ng-container matColumnDef="supplyId">
-        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <th mat-header-cell *matHeaderCellDef>{{ 'recipes.table.id' | translate }} </th>
         <td mat-cell *matCellDef="let element"> {{ element.supplyId }} </td>
       </ng-container>
 
       <!-- Description Column -->
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Supply </th>
+        <th mat-header-cell *matHeaderCellDef>{{ 'recipes.table.supply' | translate }} </th>
         <td mat-cell *matCellDef="let element">
           {{ getSupplyName(element.supplyId) }}
         </td>
@@ -53,13 +53,13 @@
 
       <!-- Quantity Column -->
       <ng-container matColumnDef="quantity">
-        <th mat-header-cell *matHeaderCellDef> Quantity </th>
+        <th mat-header-cell *matHeaderCellDef>{{ 'recipes.table.quantity' | translate }} </th>
         <td mat-cell *matCellDef="let element"> {{ element.quantity }} </td>
       </ng-container>
 
       <!-- Actions Column -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef>{{ 'recipes.table.actions' | translate }} </th>
         <td mat-cell *matCellDef="let element; let i = index">
           <button mat-icon-button color="warn" (click)="removeSupply(i)">
             <mat-icon>delete</mat-icon>
@@ -71,4 +71,5 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
+
 </div>
