--- a/src/app/Restock/planning/recipe/pages/restaurant-recipes-overview/restaurant-recipes-overview.component.html
+++ b/src/app/Restock/planning/recipe/pages/restaurant-recipes-overview/restaurant-recipes-overview.component.html
@@ -2,20 +2,20 @@
   <!-- Header -->
   <div class="recipes-header">
     <div class="recipes-header__top">
-      <h2 class="recipes-title">Recipes</h2>
+      <h2 class="recipes-title">{{ 'recipes.title' | translate }}</h2>
     </div>
 
     <div class="recipes-header__middle">
       <mat-form-field class="search-field" appearance="outline">
         <input
           matInput
-          placeholder="Search recipes..."
+          [placeholder]="'recipes.searchPlaceholder' | translate"
           [(ngModel)]="search"
         />
       </mat-form-field>
 
       <div class="sort-toggle">
-        <label for="sortByPrice">Sort by price</label>
+        <label for="sortByPrice">{{ 'recipes.sortByPrice' | translate }}</label>
         <mat-slide-toggle
           id="sortByPrice"
           [(ngModel)]="sortByPrice"
@@ -26,7 +26,7 @@
     <div class="recipes-header__actions">
       <button class="green-button" action mat-stroked-button (click)="openCreateDialog()">
         <mat-icon>add_circle</mat-icon>
-        Create
+        {{ 'recipes.create' | translate }}
       </button>
     </div>
   </div>
@@ -37,7 +37,7 @@
       <div icon>
         <mat-icon style="font-size: 3rem; color: #bcbcbc;">assignment</mat-icon>
       </div>
-      You currently have no recipes registered. Create a new recipe to start organizing your preparations and better manage your ingredients from this section.
+      {{ 'recipes.noRecipes' | translate }}
     </app-empty-section>
   }
 
@@ -48,7 +48,7 @@
         <div class="recipe-card">
           <img [src]="recipe.imageUrl" alt="Dish image" />
           <h3>{{ recipe.name }}</h3>
-          <p>Total cost: S/.{{ recipe.price }}</p>
+          <p>{{ 'recipes.totalCost' | translate }}: S/.{{ recipe.price }}</p>
           <div class="recipe-card__actions">
             <button mat-icon-button (click)="openEditDialog(recipe)">
               <mat-icon>edit</mat-icon>
