feat(recipes): improve supply management in recipe form and enhance styling

--- a/src/app/Restock/planning/recipe/components/create-and-edit-recipe/create-and-edit-recipe.component.html
+++ b/src/app/Restock/planning/recipe/components/create-and-edit-recipe/create-and-edit-recipe.component.html
@@ -3,7 +3,7 @@
     [schema]="schema"
     [initialData]="initialData"
     [mode]="mode"
-    [customComponents]="{'supply-selector': SupplySelectorComponent}"
+    [customComponents]="{'supplySelector': SupplySelectorComponent}"
     (formChange)="handleFormChange($event)"
     (submit)="onSubmit($event)"
   ></app-create-and-edit-form>
