--- a/src/app/Restock/subscription/components/subscriptions-cards/subscriptions-cards.component.html
+++ b/src/app/Restock/subscription/components/subscriptions-cards/subscriptions-cards.component.html
@@ -1,28 +1,32 @@
 <div class="plans-grid">
-    @for (subscription of subscriptions; track subscription) {
-    <!-- ngClass para expresiones condicionales. -->
+  @for (subscription of subscriptions; track subscription) {
     <mat-card class="plan-card" [ngClass]="{'highlight-card': subscription.popular }" appearance="outlined">
 
-        @if (subscription.popular) {
-        <div class="popular-label">POPULAR</div>
-        }
+      @if (subscription.popular) {
+        <div class="popular-label">{{ 'subscription.popular' | translate }}</div>
+      }
 
-        <mat-card-header class="mat-card-header">
-            <mat-card-title>{{ subscription.name }}</mat-card-title>
-            <mat-card-subtitle>S/. {{ subscription.price }} / month</mat-card-subtitle>
-        </mat-card-header>
+      <mat-card-header class="mat-card-header">
+        <mat-card-title>{{ subscription.name }}</mat-card-title>
+        <mat-card-subtitle>
+          S/. {{ subscription.price }} / {{ 'subscription.perMonth' | translate }}
+        </mat-card-subtitle>
+      </mat-card-header>
 
-        <mat-card-content>
-            <ul>
-                @for (feature of subscription.features; track feature) {
-                <li>{{ feature }}</li>
-                }
-            </ul>
-        </mat-card-content>
+      <mat-card-content>
+        <ul>
+          @for (feature of subscription.features; track feature) {
+            <li>{{ feature }}</li>
+          }
+        </ul>
+      </mat-card-content>
 
-        <mat-card-actions>
-            <button mat-raised-button class="subscribe-button">SUBSCRIBE</button>
-        </mat-card-actions>
+      <mat-card-actions>
+        <button mat-raised-button class="subscribe-button"
+                [routerLink]="['/dashboard', role, 'subscription', 'plan', subscription.id]">
+          {{ 'subscription.subscribe' | translate }}
+        </button>
+      </mat-card-actions>
     </mat-card>
-    }
+  }
 </div>
