feat(iam): fix sign-in and sign-up wrapper

--- a/src/app/Restock/iam/pages/sign-up/sign-up.component.css
+++ b/src/app/Restock/iam/pages/sign-up/sign-up.component.css
@@ -19,7 +19,8 @@
   justify-content: center;
   align-items: center;
   padding: 3rem;
-  background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+  /*background: linear-gradient(135deg, #f5f7fa, #c3cfe2);*/
+  background: linear-gradient(135deg, #d5e8df, #c4d5cb);
   min-height: 100vh;
 }
 
