--- a/src/app/Restock/resource/inventory/pages/supplier-inventory/supplier-inventory.component.html
+++ b/src/app/Restock/resource/inventory/pages/supplier-inventory/supplier-inventory.component.html
@@ -12,6 +12,7 @@
       [supplies]="supplies"
       [categories]="categories"
       (edit)="editSupply($event)"
+      (delete)="deleteSupply($event)"
     />
   }
 
