fix(resource): fix category data

--- a/src/app/Restock/resource/orders-to-suppliers/components/order-details/order-details-modal.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/order-details/order-details-modal.component.html
@@ -184,7 +184,7 @@
                     }}:</strong
                   >
                   {{
-                    supplyRelation.batch?.supply?.category?.name ||
+                    supplyRelation.batch?.supply?.category ||
                       ("common.notDefined" | translate)
                   }}
                 </p>
