--- a/src/app/Restock/Analytics/components/restaurant-last-supplies-widget/restaurant-last-supplies-widget.component.html
+++ b/src/app/Restock/Analytics/components/restaurant-last-supplies-widget/restaurant-last-supplies-widget.component.html
@@ -9,7 +9,7 @@
   <div #carouselContainer class="carousel-container">
     <div class="supply-card" *ngFor="let b of batches">
       <h3>{{ b.supply?.name }}</h3>
-      <p class="category">{{ b.supply?.category?.name || 'Uncategorized' }}</p>
+      <p class="category">{{ b.supply?.category || 'Uncategorized' }}</p>
       <p class="description">{{ b.supply?.description || '-' }}</p>
     </div>
   </div>
@@ -24,7 +24,7 @@
   <div class="ingredient-pair" *ngFor="let pair of getPairs()">
     <div class="ingredient-card" *ngFor="let b of pair">
       <h4>{{ b.supply?.name }}</h4>
-      <p class="category">{{ b.supply?.category?.name || 'Uncategorized' }}</p>
+      <p class="category">{{ b.supply?.category || 'Uncategorized' }}</p>
     </div>
   </div>
 </div>
