--- a/src/app/Restock/resource/inventory/components/batch-details/batch-details.component.html
+++ b/src/app/Restock/resource/inventory/components/batch-details/batch-details.component.html
@@ -5,7 +5,7 @@
   }
   <div class="detail-row">
     <span class="label">{{ 'inventory.tableCategory' | translate }}:</span>
-    <span class="value">{{ data.supply?.category?.name || '-' }}</span>
+    <span class="value">{{ data.supply?.category || '-' }}</span>
   </div>
   <div class="detail-row">
     <span class="label">{{ 'inventory.tableUnit' | translate }}:</span>
