fix(config): correct path for translation files in app configuration

--- a/src/app/public/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/public/dashboard-layout/dashboard-layout.component.html
@@ -13,7 +13,7 @@
     </button>
     }
 
-    <img src="/assets/imagen-principal.png" alt="Logo" class="principal-image" />
+    <img src="./assets/imagen-principal.png" alt="Logo" class="principal-image" />
 
     <div class="content-wrapper">
       <router-outlet></router-outlet>
